--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Version 3.0 od Demo COde</h1>
-      <p>Code Pipeline Demo Done </p>
+      <h1>Version 4. </h1>
+      <p>Automated deploy </p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
